<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:scrollbars="horizontal"
     >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/name_Duration"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/Date"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Interrupt_Type"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/Time"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/name_Date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/Lat" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Start_Time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/Lon"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/End_Time"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/Speed"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Interrupt_Status"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/Acc_X"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />
        <!-- extra Added -->
        <!--nothere but i have addded-->
        <TextView
            android:id="@+id/Crng"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/Acc_Y"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/Acc_Z"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/Signal_Strength"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

      <!--  <TextView
            android:id="@+id/Acc_X"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/Gyro_X"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Acc_Y"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/Gyro_Y"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />
        <TextView
            android:id="@+id/Acc_Z"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/Gyro_Z"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />-->

        <TextView
            android:id="@+id/Signal_Strength"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/GPS_Accuracy"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Gyro_X"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/GPS_Accuracy"
            android:visibility="gone"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />

        <TextView
            android:id="@+id/Breakings"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/breaking"
            android:textColor="#000000"
            tools:text="@string/breaking" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D3D3D3" />
    </TableRow>


</LinearLayout>