<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#5a5a5a">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#bcc6cc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewSummaryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trip Details"
            android:textColor="#000"
            android:textSize="21sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_alignBaseline="@+id/maps"
            android:layout_alignBottom="@+id/maps"
            android:layout_toRightOf="@+id/iv_back"
            android:layout_toEndOf="@+id/iv_back" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map View"
        android:textColor="#000"
        android:textSize="21sp"
        android:gravity="right"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:id="@+id/maps"
        android:typeface="serif"
        android:layout_alignBottom="@+id/iv_back"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/relativeLayout1"
        tools:context="com.ion.iondriving.MapsActivity" />
<HorizontalScrollView
    android:id="@+id/horizontalView"
    android:layout_width="match_parent"
    android:layout_below="@+id/map"
    android:layout_height="750dp"
    android:scrollbars="horizontal|vertical" >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@color/headerColor"
            >

            <TextView
                android:id="@+id/name_Duration"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/Date"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/Interrupt_Type"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/Time"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />


            <TextView
                android:id="@+id/name_Date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:text="@string/Lat" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/Start_Time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/Lon"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/End_Time"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/Speed"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />
   <TextView
                android:id="@+id/Interrupt_Status"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/Acc_X"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />
            <!-- extra Added -->
            <!--nothere but i have addded-->
            <TextView
                android:id="@+id/Crng"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/Acc_Y"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/Acc_Z"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/Signal_Strength"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

          <!--  <TextView
                android:id="@+id/Acc_X"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/Gyro_X"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/Acc_Y"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/Gyro_Y"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />
            <TextView
                android:id="@+id/Acc_Z"
                android:gravity="center"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="@string/Gyro_Z"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />-->

            <TextView
                android:id="@+id/Signal_Strength"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/GPS_Accuracy"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />

            <TextView
                android:id="@+id/Gyro_X"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/GPS_Accuracy"
                android:visibility="gone"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />
            <TextView
                android:id="@+id/Breaking"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:text="@string/breaking"
                />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#D3D3D3" />
        </TableRow>
        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:divider="#D3D3D3"
            android:dividerHeight="1px" >
        </ListView>
    </LinearLayout>

</HorizontalScrollView>
    </RelativeLayout>