<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dpsettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5a5a5a"
    tools:context="com.ion.iondriving.DPSettingsActivity">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#bcc6cc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:id="@+id/textViewSummaryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Settings"
            android:textColor="#000"
            android:textSize="21sp"
            android:textStyle="bold"
            android:typeface="serif" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp"
       >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acc_thersod"
            android:text="@string/acc_ter"
            android:textSize="20sp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="0"
            android:id="@+id/acc_thers"
            android:layout_below="@+id/acc_thersod"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/braking_ther"
            android:text="Breaking Threshold"
            android:layout_below="@+id/acc_thers"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_below="@+id/braking_ther"
            android:max="10"
            android:progress="0"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_voice_alert"
            android:text="@string/voice_alert"
            android:layout_below="@+id/seekBar"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/voice_alert"
            android:layout_alignTop="@+id/tv_voice_alert"
            android:layout_alignRight="@+id/seekBar"
            android:layout_alignEnd="@+id/seekBar"
            android:textColor="@android:color/holo_blue_bright"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:id="@+id/textView"
            android:text="@string/audio_settings"
            android:visibility="gone"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            android:id="@+id/audio_sw"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_break_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/braking_ther"
            android:layout_above="@+id/seekBar"
            android:layout_alignLeft="@+id/voice_alert"
            android:layout_alignStart="@+id/voice_alert" />

        <TextView
            android:id="@+id/tv_breaking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/acc_thers"
            android:layout_alignLeft="@+id/tv_break_value"
            android:layout_alignStart="@+id/tv_break_value" />
    </RelativeLayout>


</RelativeLayout>
